<resources>
    <string name="app_name">MovieSearcher</string>
    <string name="find_button">Найти</string>
    <string name="tab_poster">Постер</string>
    <string name="tab_about">О фильме</string>
    <string name="enter_movie_name">Введите название</string>
    <string name="error_message_movies_screen">Что-то пошло не так, проверьте подключение к интернету</string>
    <string name="imdb_rate">Рейтинг IMDB:</string>
    <string name="year">Год:</string>
    <string name="country">Страна:</string>
    <string name="genre">Жанр:</string>
    <string name="director">Режисер:</string>
    <string name="writer">Сценарист:</string>
    <string name="actors">В ролях:</string>
    <string name="plot">Сюжет:</string>
    <string name="show_cast">Show cast</string>
    <string name="nothing_searched_yet">История поиска пуста</string>
    <string name="search_not_started">Введите запрос для поиска</string>
    <string name="error_no_internet">Ошибка! Проверьте подключение к интернету</string>
    <string name="something_went_wrong">Что-то пошло не так, попробуйте ещё раз</string>
    <string name="nothing_found">Ничего не найдено, попробуйте ещё раз</string>
    <string name="enter_person_name">Введите имя</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_info">Версия: 1.0\nобратная связь: bespalov.m.9@ya.ru</string>
    <string name="app_info_name">IMDB Movie Searcher</string>
    <string name="movies_bottom_nav_view">Фильмы</string>
    <string name="persons_bottom_nav_view">Люди</string>
    <string name="history_bottom_nav_view">История</string>
    <string name="info_bottom_nav_view">Информация</string>
</resources>